--- a/23-Regression Graphs and Tables/23-Regression Graphs and Tables.Rmd
+++ b/23-Regression Graphs and Tables/23-Regression Graphs and Tables.Rmd
@@ -98,53 +98,17 @@ Content
 
 ## LaTeX: Example 1 
 
-![](images/Latex_table1.pdf)
+![](images/latex_table1.png)
 
 
-## Latex: Example 2 
+## Latex: Example 2 {.smaller}
 
 Sweave Document
-```{r, eval=FALSE}
-\documentclass[]{article}
-\usepackage{longtable}
-\usepackage{caption}
-
-
-\begin{document}
-
-
-\title{A Short Introduction}
-\author{Angela Dixon}
-\date{\today}
-\maketitle
-
-\SweaveOpts{concordance=TRUE}
- \begin{center}
-   \begin{tabular}{||c c c c||} 
-   \hline
-   Col1 & Col2 & Col2 & Col3 \\ [0.5ex] 
-   \hline\hline
-   1 & 6 & 87837 & 787 \\ 
-   \hline
-   2 & 7 & 78 & 5415 \\
-   \hline
-   3 & 545 & 778 & 7507 \\
-   \hline
-   4 & 545 & 18744 & 7560 \\
-   \hline
-   5 & 88 & 788 & 6344 \\ [1ex] 
-   \hline
-  \end{tabular}
-  \end{center}
-
-
-\end{document}
-```
-
+<img src="images/latex_code2.png" height="500px" width="800px" />
 
 ## Latex: Example 2
 
-![](images/Latex_table2.pdf)
+![](images/latex_table2.png)
 
 ## LaTeX: More document types 
 
@@ -154,7 +118,9 @@ Sweave Document
 - CV  
 
 <br>
-- Start by trying to find templates and modifying them 
+- Start by trying to find templates and modifying them  
+
+- Documents from OPR's 2014 LaTeX workshop: https://www.dropbox.com/sh/y2esbxnzsws4sos/176KhEieUO
 
 ## LaTeX and R 
 
@@ -166,7 +132,9 @@ Sweave Document
 ## Automating Tables in R {.smaller}
 
 *  Word on the (Wallace) street is that the stargazer package is currently the front-runner and the one I recommend 
-* For templates see http://www.princeton.edu/~otorres/NiceOutputR.pdf 
+* For help see:  
+    + http://cran.r-project.org/web/packages/stargazer/stargazer.pdf
+    + http://www.princeton.edu/~otorres/NiceOutputR.pdf
 * Some helpful options within stargazer 
     + type ("latex", "text", "html") 
     + title
