--- a/23-Regression Graphs and Tables/23-Regression Graphs and Tables.Rmd
+++ b/23-Regression Graphs and Tables/23-Regression Graphs and Tables.Rmd
@@ -143,7 +143,7 @@ Sweave Document
     + dep.var.labels
     + column.labels
     + out
-    + star.cutoff
+    + star.cutoffs
     + digits
     
 
